Métodos de logout, resetPassword, forgotPassword e profile com userMiddleware e emailService com Front apenas de login/logout para acesso às tarefas.
