# backend/controllers/usuario.controller.js
@@ -85,4 +85,144 @@ export default class UsuarioController {
         .json({ message: "Erro ao realizar o login.", error });
     }
   }
+
+  static async logout(req, res) {
+    try {
+      // Limpa o cookie chamado 'jwt'
+      res.clearCookie("token", {
+        httpOnly: true,
+        secure: false, // Altere para true se estiver em produção (HTTPS)
+        sameSite: "lax",
+      });
+
+      return res.status(200).json({ message: "Logout realizado com sucesso." });
+    } catch (error) {
+      return res
+        .status(500)
+        .json({ message: "Erro ao realizar logout.", error });
+    }
+  }
+
+  static async forgotPassword(req, res) {
+    const { email } = req.body;
+
+    if (!email) return res.status(402).json({ message: "e-mail requerido" });
+
+    try {
+      const usuario = await Usuario.findOne({ email });
+
+      if (!usuario) {
+        return res.status(200).json({
+          message: "Se o e-mail estiver cadastrado, um link será enviado.",
+        });
+      }
+
+      const resetToken = crypto.randomBytes(32).toString("hex");
+      const hashToken = await argon2.hash(resetToken);
+      const resetTokenExpiry = new Date(
+        Date.now() + RESET_TOKEN_EXPIRATION_HOURS * 60 * 60 * 1000,
+      );
+
+      await Usuario.findByIdAndUpdate(usuario.id, {
+        resetToken: hashToken,
+        resetTokenExpiry: resetTokenExpiry,
+      });
+
+      sendPasswordResetEmail(usuario.email, resetToken).catch((err) => {
+        console.error("Falha no envio do e-mail.");
+      });
+
+      return res.status(200).json({
+        message: "Se o e-mail estiver cadastrado, um link será enviado.",
+        resetToken,
+      });
+    } catch (error) {
+      return res.status(200).json({
+        message: "Se o e-mail estiver cadastrado, um link será enviado.",
+      });
+    }
+  }
+
+  static async resetPassword(req, res) {
+    const { token, novaSenha } = req.body;
+
+    if (!token || !novaSenha) {
+      return res
+        .status(400)
+        .json({ message: "Token e nova senha são obrigatórios." });
+    }
+
+    try {
+      // Busca usuários que possuem um token válido e não expirado
+      // Observação: select('+resetToken +resetTokenExpiry') força a busca desses campos caso estejam ocultos no Schema
+      const usuarios = await Usuario.find({
+        resetTokenExpiry: { $gt: Date.now() }, // $gt = Greater Than (Data de expiração maior que 'agora')
+      }).select("+resetToken +resetTokenExpiry");
+
+      let usuarioValido = null;
+
+      // Compara o token recebido com os hashes salvos no banco
+      for (const usuario of usuarios) {
+        if (usuario.reset_token) {
+          const tokenValido = await argon2.verify(usuario.reset_token, token);
+          if (tokenValido) {
+            usuarioValido = usuario;
+            break;
+          }
+        }
+      }
+
+      // Se nenhum usuário for encontrado com esse token válido
+      if (!usuarioValido)
+        return res.status(400).json({ message: "Token inválido ou expirado." });
+
+      // Hash da nova senha
+      const hashNovaSenha = await argon2.hash(novaSenha);
+
+      // Atualiza a senha e limpa o token de recuperação
+      usuarioValido.senha = hashNovaSenha;
+      usuarioValido.reset_token = undefined;
+      usuarioValido.reset_token_expire = undefined;
+
+      await usuarioValido.save();
+
+      return res.status(200).json({ message: "Senha redefinida com sucesso!" });
+    } catch (error) {
+      console.error("Erro ao redefinir a senha: ", error);
+      return res
+        .status(500)
+        .json({ message: "Erro ao redefinir a senha.", error });
+    }
+  }
+
+  static async profile(req, res) {
+    try {
+      const userToken = req.user;
+      console.log("TOKEN/PAYLOAD:", userToken);
+
+      if (!userToken)
+        return res.status(401).json({ message: "Não autenticado." });
+
+      // Extrai o ID do usuário guardado dentro do req.user (pode ser id ou _id dependendo de como salvou no JWT)
+      const userId = userToken.id || userToken._id;
+
+      // BUSCA NO BANCO DE DADOS
+
+      // O Mongoose já esconde a senha automaticamente por conta do "select: false" no Schema
+      const dadosUsuario = await Usuario.findById(userId);
+
+      if (!dadosUsuario)
+        return res.status(404).json({ message: "Usuário não encontrado" });
+
+      console.log("USUÁRIO DO BANCO: ", dadosUsuario);
+
+      // Retorna os dados do banco para o Frontend
+      return res.status(200).json({ usuario: dadosUsuario });
+    } catch (error) {
+      console.error("Erro no Profile: ", error);
+      return res
+        .status(500)
+        .json({ message: "Erro ao buscar usuário.", error: error.message });
+    }
+  }
 }
