# backend/routes/usuario.routes.js
@@ -1,9 +1,14 @@
 import { Router } from "express";
 import UsuarioController from "../controllers/usuario.controller.js";
+import userMiddleware from "../middleware/user.middleware.js";
 
 const usuarioRoutes = Router();
 
 usuarioRoutes.post("/", UsuarioController.registrarUsuario);
 usuarioRoutes.post("/login", UsuarioController.login);
+usuarioRoutes.post("/logout", UsuarioController.logout);
+usuarioRoutes.post("/resetPassword", UsuarioController.resetPassword);
+usuarioRoutes.post("/forgotPassword", UsuarioController.forgotPassword);
+usuarioRoutes.get("/me", userMiddleware, UsuarioController.profile);
 
 export default usuarioRoutes;
